move rRNA database to /ref_genome

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ params {
   forward       = "$baseDir/data/fastq/*_1.fq.gz"
   reverse       = "$baseDir/data/fastq/*_2.fq.gz"
   pairs         = "$baseDir/data/fastq/*_{1,2}.fq.gz"
-  bt2index      =  "$baseDir/silva/silva_rrna"
+  bt2index      = "/ref_genome/data/rRNA/silva_rrna"
 } 
 
 process {
