--- a/nextflow.config
+++ b/nextflow.config
@@ -24,8 +24,8 @@ params {
 process {
         publishDir = [path: params.output, mode: 'copy', overwrite: 'true']
         executor='slurm'
-        memory='2G'
-        cpus='1'
-        time='2h'
+        memory=2.GB
+        cpus=1
+        time=2.h
         }
 
