--- a/nextflow.config
+++ b/nextflow.config
@@ -15,9 +15,9 @@ params {
   name          = "trinity-rnaseq"
   genome        = "/ref_genome/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/WholeGenomeFasta/genome.fa"
   annotation    = "/ref_genome/igenomes/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.gtf"
-  forward       = "$baseDir/data/fastq/*_1.fq.gz"
-  reverse       = "$baseDir/data/fastq/*_2.fq.gz"
-  pairs         = "$baseDir/data/fastq/*_{1,2}.fq.gz"
+  forward       = "$baseDir/data/fastq/*pos*_R1.fq.gz"
+  reverse       = "$baseDir/data/fastq/*pos*_R2.fq.gz"
+  pairs         = "$baseDir/data/fastq/*pos*_R{1,2}.fq.gz"
   bt2index      = "/ref_genome/data/rRNA/silva_rrna"
 } 
 
